# Lunar

./: .gitignore  .gitlab-ci.yml  .gitlab-ci.yml.disabled  .gitmodules  CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  README.md  rust-toolchain.toml
.cargo/: config.toml
.github/workflows/: ci.yml  docs.yml
.hooks/: pre-commit
crates/engine-2d/: Cargo.toml
crates/engine-2d/src/: animation.rs  collision.rs  lib.rs
crates/engine-3d/: Cargo.toml
crates/engine-3d/src/: camera.rs  lib.rs  light.rs  material.rs  mesh.rs  plugin.rs  systems.rs  transform.rs
crates/engine-animation/: Cargo.toml
crates/engine-animation/src/: lib.rs
crates/engine-api/: Cargo.toml
crates/engine-assets/: Cargo.toml
crates/engine-assets/src/: bundled.rs  lib.rs  web_fetch.rs
crates/engine-atlas/: Cargo.toml
crates/engine-atlas/src/: lib.rs  manifest.rs  packer.rs  region.rs
crates/engine-core/: Cargo.toml
crates/engine-core/src/: app.rs  command.rs  dialogue.rs  dialogue_parser.rs  engine.rs  error.rs  game_loop.rs  hierarchy.rs  lib.rs  localization.rs  prelude.rs  scene.rs  scene_format.rs  schedule.rs  state.rs  world_manifest.rs  zone.rs
crates/engine-dialogue/: Cargo.toml
crates/engine-dialogue/src/: dialogue.rs  lib.rs  parser.rs
crates/engine-image/: Cargo.toml
crates/engine-image/src/: decode.rs  encode.rs  error.rs  format.rs  lib.rs  simd.rs
crates/engine-image/tests/: roundtrip.rs
crates/engine-input/: Cargo.toml
crates/engine-input/src/: lib.rs
crates/engine-localization/: Cargo.toml
crates/engine-math/: Cargo.toml
crates/engine-render/: Cargo.toml
crates/engine-render/src/: atlas.rs  lib.rs  mesh.rs  render_pass_3d.rs  text.rs  textbox.rs
crates/engine-tilemap/: Cargo.toml
crates/engine-tilemap/src/: lib.rs
crates/engine-ui/: Cargo.toml
crates/engine-ui/src/: lib.rs
crates/engine-zones/: Cargo.toml
crates/engine-zones/src/: lib.rs
crates/lunar/: Cargo.toml
crates/lunar-2d/: Cargo.toml
crates/lunar-2d/src/: animation.rs  collision.rs  lib.rs
crates/lunar-3d/: Cargo.toml
crates/lunar-3d/src/: animation.rs  bundles.rs  camera.rs  collision.rs  decals.rs  fog.rs  lib.rs  light.rs  material.rs  mesh.rs  mesh_registry.rs  particles.rs  plugin.rs  primitives.rs  simd.rs  surface_shader.rs  systems.rs  terrain.rs  transform.rs  visibility.rs  water.rs
crates/lunar-ai/: Cargo.toml
crates/lunar-ai/src/: lib.rs
crates/lunar-animation/: Cargo.toml
crates/lunar-assets/: Cargo.toml
crates/lunar-assets/src/: bundled.rs  lib.rs  web_fetch.rs
crates/lunar-atlas/: Cargo.toml
crates/lunar-atlas/src/: lib.rs  manifest.rs  packer.rs  region.rs
crates/lunar-audio/: Cargo.toml
crates/lunar-audio/src/: decoder.rs  lib.rs  mixer.rs  plugin.rs  source.rs
crates/lunar-audio/src/backend/: mod.rs  native.rs  web.rs
crates/lunar-bsp/: Cargo.toml
crates/lunar-bsp-build/: Cargo.toml
crates/lunar-bsp-build/src/: gltf.rs  lib.rs  partition.rs  portal.rs  pvs.rs
crates/lunar-bsp/src/: bvh.rs  level.rs  lib.rs  plugin.rs  portal.rs
crates/lunar-camera-3d/: Cargo.toml
crates/lunar-camera-3d/src/: lib.rs
crates/lunar-core/: Cargo.toml
crates/lunar-dialogue/: Cargo.toml
crates/lunar-gamedata/: Cargo.toml
crates/lunar-gamedata-build/: Cargo.toml
crates/lunar-gamedata-build/src/: lib.rs
crates/lunar-gamedata/src/: lib.rs
crates/lunar-image/: Cargo.toml  build.rs
crates/lunar-image/src/: decode.rs  encode.rs  error.rs  filter.rs  format.rs  lib.rs  simd.rs
crates/lunar-image/tests/: roundtrip.rs
crates/lunar-input/: Cargo.toml
crates/lunar-input/src/: lib.rs
crates/lunar-lightmap/: Cargo.toml
crates/lunar-lightmap/src/: baker.rs  lib.rs
crates/lunar-localization/: Cargo.toml
crates/lunar-macros/: Cargo.toml
crates/lunar-macros/src/: lib.rs
crates/lunar-math/: Cargo.toml
crates/lunar-math/src/: lib.rs  macros.rs  screen_rect.rs  types.rs
crates/lunar-nav/: Cargo.toml
crates/lunar-particles/: Cargo.toml
crates/lunar-pathfinding-pre/: Cargo.toml
crates/lunar-pathfinding-rt/: Cargo.toml
crates/lunar-physics-2d/: Cargo.toml
crates/lunar-physics-3d/: Cargo.toml
crates/lunar-plugin-ai/: Cargo.toml
crates/lunar-plugin-animation/: Cargo.toml
crates/lunar-plugin-camera-3d/: Cargo.toml
crates/lunar-plugin-dialogue/: Cargo.toml
crates/lunar-plugin-localization/: Cargo.toml
crates/lunar-plugin-particles/: Cargo.toml
crates/lunar-plugin-physics-2d/: Cargo.toml
crates/lunar-plugin-physics-3d/: Cargo.toml
crates/lunar-plugin-spline/: Cargo.toml
crates/lunar-plugin-tilemap/: Cargo.toml
crates/lunar-plugin-timeline/: Cargo.toml
crates/lunar-plugin-ui/: Cargo.toml
crates/lunar-plugin-zones/: Cargo.toml
crates/lunar-render/: Cargo.toml
crates/lunar-render-3d/: Cargo.toml  build.rs
crates/lunar-spline/: Cargo.toml
crates/lunar-tilemap/: Cargo.toml
crates/lunar-timeline/: Cargo.toml
crates/lunar-ui/: Cargo.toml
crates/lunar-zones/: Cargo.toml
docs/: 01-setup.md  02-ecs.md  03-game-loop.md  2d.md  api_seal_test.md  assets.md  audio.md  engine_assets.md  engine_core.md  engine_dialogue.md  engine_image.md  engine_localization.md  engine_math.md  engine_render.md  input.md  lunar-image-format.md  lunar.md  lunar_assets.md  lunar_atlas.md  lunar_dialogue.md  lunar_image.md  lunar_input.md  lunar_lib.md  lunar_macros.md  lunar_render.md  lunar_web.md  lunar_zones.md  plugins.md  prelude.md  rpg_example.md  window.md
docs/2d/: animation.md  collision.md  rendering.md
docs/3d/: culling.md  lighting.md  materials.md  (+3 more)
plans/: accessibility-gap.md  bsp-lightmap-wiring.md  bsp-plan.md  codebase-audit.md  competitive-gap-analysis.md  engine-image-format.md  moonrose-design.md  optimize.md  optimize_sprint.md  performance-squeezing.md  performance.md  platform_demo.md  renderer-perf-sprint2.md  renderer-sprint3.md  renderer-sprint4.md  renderer-sprint5.md  renderer-sprint6.md  research-analysis.md  roadmap.md  sprint7.md  sprint8.md  todo.md
scripts/: build_all.go  go.mod  run_wasm.go
src/: app_macro.rs  main.rs  web.rs
tests/: cross_compile.rs
tools/: rustdoc_to_md.py
(+153 files in other folders)
