[patch.crates-io]
# wgpu 29.0.1 instanceof check for GPUCanvasContext fails in wasm-bindgen;
# patched to use unchecked_into which is safe since getContext("webgpu") guarantees the type
wgpu = { path = "vendor/wgpu" }

[workspace]
members = [
    "crates/lunar-core",
    "crates/lunar-2d",
    "crates/lunar-3d",
    "crates/lunar-render",
    "crates/lunar-render-3d",
    "crates/lunar-input",
    "crates/lunar-math",
    "crates/lunar",
    "crates/lunar-macros",
    "crates/lunar-assets",
    "crates/lunar-image",
    "crates/lunar-atlas",
    "crates/lunar-dialogue",
    "crates/lunar-localization",
    "crates/lunar-zones",
    "crates/lunar-animation",
    "crates/lunar-tilemap",
    "crates/lunar-ui",
    "crates/lunar-physics-2d",
    "crates/lunar-particles",
    "crates/lunar-pathfinding-rt",
    "crates/lunar-pathfinding-pre",
    "crates/lunar-ai",
    "tests/api_seal",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "a game engine for Rust with ECS, wgpu rendering, and WASM support"
repository = "https://github.com/jimmy/Lunar"
homepage = "https://github.com/jimmy/Lunar"
readme = "README.md"
keywords = ["game-engine", "gamedev", "ecs", "wgpu", "2d"]
categories = ["game-engines", "graphics", "wasm"]

[workspace.dependencies]
bevy_ecs = "0.18"
glam = "0.30"
wgpu = { version = "29", default-features = false }
raw-window-handle = "0.6"
sdl3 = "0.18"
log = "0.4"
env_logger = "0.11"
pollster = "0.4"

[package]
name = "lunar-game"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
debug = ["bevy_ecs/debug"]

[[bin]]
name = "lunar"
path = "src/main.rs"

[[bin]]
name = "lunar-web"
path = "src/web.rs"

[[example]]
name = "rpg_example"
path = "examples/rpg_example/main.rs"

[[example]]
name = "platform_demo"
path = "examples/platform_demo/main.rs"

[dependencies]
# `lunar` is the only dependency a real game needs. enable optional modules
# via feature flags.
lunar = { path = "crates/lunar", package = "lunar-lib", features = ["dialogue", "3d"] }

bevy_ecs = { workspace = true }
log = { workspace = true }

# web entry point only
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
console_error_panic_hook = "0.1"
web-sys = { version = "0.3", features = ["Window", "Document", "HtmlCanvasElement", "CanvasRenderingContext2d"] }
