[workspace]
members = [
		"crates/lunar-core",
		"crates/lunar-2d",
		"crates/lunar-3d",
		"crates/lunar-render",
		"crates/lunar-render-3d",
		"crates/lunar-input",
		"crates/lunar-math",
		"crates/lunar",
		"crates/lunar-macros",
		"crates/lunar-assets",
		"crates/lunar-image",
		"crates/lunar-atlas",
		"crates/lunar-bsp",
		"crates/lunar-bsp-build",
		"crates/lunar-lightmap",
		"crates/lunar-gamedata",
		"crates/lunar-gamedata-build",
		"crates/lunar-audio",
		"tests/api_seal",
	"tools/navmesh-bench",
]
resolver = "2"

[workspace.package]
version = "1.0.0"
edition = "2024"
license = "MPL-2.0"
description = "a game engine for Rust with ECS, wgpu rendering, and WASM support"
repository = "https://gitlab.com/5unekku/Lunar"
homepage = "https://gitlab.com/5unekku/Lunar"
readme = "README.md"
keywords = ["game-engine", "gamedev", "ecs", "wgpu", "2d"]
categories = ["game-engines", "graphics", "wasm"]

[workspace.dependencies]
bevy_ecs = { version = "0.18", features = ["multi_threaded"] }
glam = "0.33"
wgpu = { version = "29.0.3", default-features = false }
raw-window-handle = "0.6"
sdl3 = { version = "0.18", features = ["build-from-source-static"] }
log = "0.4"
env_logger = "0.11"
pollster = "0.4"
bytemuck = "1"
rayon    = "1"
rustc-hash = "2"

[package]
name = "lunar-game"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[features]
debug = ["bevy_ecs/debug"]

[[bin]]
name = "lunar"
path = "src/main.rs"

[[bin]]
name = "lunar-web"
path = "src/web.rs"

[[example]]
name = "platform_demo"
path = "examples/platform_demo/main.rs"

[[example]]
name = "shooter_example"
path = "examples/shooter_example/main.rs"

[dependencies]
# `lunar` is the only dependency a real game needs. enable optional modules
# via feature flags.
lunar = { path = "crates/lunar", package = "lunar-engine", features = ["3d"] }

bevy_ecs = { workspace = true }
log = { workspace = true }

# web entry point only
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
console_error_panic_hook = "0.1"
web-sys = { version = "0.3", features = ["Window", "Document", "HtmlCanvasElement", "CanvasRenderingContext2d"] }

# ── build profiles ────────────────────────────────────────────────────────────
# principle 1: small, fast binaries that run well on low-spec machines.
# these apply workspace-wide (cargo reads profiles only from the root manifest).

[profile.release]
opt-level     = 3        # maximum speed
lto           = "fat"    # whole-program LTO: cross-crate inlining + dead code elimination
codegen-units = 1        # single codegen unit: best optimisation, slowest compile
panic         = "abort"  # no unwind tables: smaller binary, no overhead
strip         = "symbols"  # strip debug symbols, keep minimal export table

# faster debug iteration: optimise dependencies (wgpu, bevy_ecs, zstd) at -O3 while
# keeping our own crates unoptimised and fully debuggable. big win for dev builds of
# a gpu-heavy engine, with no cost to debugging lunar's own code.
[profile.dev.package."*"]
opt-level = 3

# cubeb-sys must stay at the profile default: at opt-level 3 the cmake crate flips
# libcubeb to RelWithDebInfo, whose nested `cargo build --release` drops
# libcubeb_pulse.a in release/ while cubeb-sys's build.rs (PROFILE=debug) searches
# debug/ — dev builds then fail to link on any machine with libpulse installed.
[profile.dev.package.cubeb-sys]
opt-level = 0
