[package]
name = "engine-2d"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "2d transform propagation and systems for lunar"
repository.workspace = true
readme.workspace = true
categories.workspace = true
keywords.workspace = true

[dependencies]
engine-core = { path = "../engine-core" }
engine-math = { path = "../engine-math" }
bevy_ecs = { workspace = true }
