[package]
name = "engine-3d"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "3d components and systems for lunar — transform hierarchy, camera, mesh, material, lighting"
repository.workspace = true
readme.workspace = true
categories.workspace = true
keywords.workspace = true

[dependencies]
engine-core = { path = "../engine-core" }
engine-math = { path = "../engine-math" }
engine-assets = { path = "../engine-assets" }
bevy_ecs = { workspace = true }
log = { workspace = true }
