[package]
name = "engine-animation"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "frame-by-frame sprite animation for lunar 2d games"
repository.workspace = true
readme.workspace = true
categories.workspace = true
keywords.workspace = true

[dependencies]
engine-core = { path = "../engine-core" }
engine-math = { path = "../engine-math" }
engine-render = { path = "../engine-render" }
bevy_ecs = { workspace = true }
