[package]
name = "engine-assets"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
engine-core = { path = "../engine-core" }
bevy_ecs = { workspace = true }
log = { workspace = true }
engine-image = { path = "../engine-image" }
crossbeam-channel = "0.5"
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "bmp", "webp", "gif"] }
rodio = { version = "0.20", default-features = false, features = ["wav", "vorbis"] }
fontdue = "0.9"
notify = { version = "7.0", default-features = false }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["Window", "Response", "RequestInit", "Headers", "RequestMode"] }
js-sys = "0.3"
