[package]
name = "engine-assets"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "asset system: Handle<T>, AssetServer, async loading, hot-reloading, font/audio/texture loaders"
repository.workspace = true
readme.workspace = true
categories.workspace = true
keywords.workspace = true

[dependencies]
engine-core = { path = "../engine-core" }
bevy_ecs = { workspace = true }
log = { workspace = true }
engine-image = { path = "../engine-image" }
crossbeam-channel = "0.5"
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "bmp", "webp", "gif"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
notify = { version = "7.0", default-features = false }
hound = "3"
lewton = "0.10"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["Window", "Response", "Request", "RequestInit", "Headers", "RequestMode"] }
js-sys = "0.3"
