[package]
name = "engine-atlas"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
engine-image = { path = "../engine-image" }
engine-assets = { path = "../engine-assets" }
engine-math = { path = "../engine-math" }
bevy_ecs = { workspace = true }
log = { workspace = true }
thiserror = "2"
