[package]
name = "engine-atlas"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "texture atlas: maxrects bin-packing, region lookup, manifest serialization (RON/binary)"
repository.workspace = true
readme.workspace = true
categories.workspace = true
keywords.workspace = true

[dependencies]
engine-image = { path = "../engine-image" }
engine-assets = { path = "../engine-assets" }
engine-math = { path = "../engine-math" }
bevy_ecs = { workspace = true }
log = { workspace = true }
thiserror = "2"
