[package]
name = "engine-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
bevy_ecs = { workspace = true }
engine-math = { path = "../engine-math" }
engine-api = { path = "../engine-api" }
log = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["Window", "Performance"] }
