[package]
name = "engine-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "core engine: game loop, ECS wiring, plugin system, scenes, hierarchy, error handling"
repository.workspace = true
readme.workspace = true
categories.workspace = true
keywords.workspace = true

[dependencies]
bevy_ecs = { workspace = true }
engine-math = { path = "../engine-math" }
log = { workspace = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ron = "0.12"
bincode = "1"
smallvec = "1"
roxmltree = "0.20"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["Window", "Performance"] }
