[package]
name = "engine-dialogue"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "dialogue system for lunar: branching conversations, RON-authored scripts"
repository.workspace = true
readme.workspace = true
categories.workspace = true
keywords.workspace = true

[dependencies]
bevy_ecs = { workspace = true }
engine-core = { path = "../engine-core" }
log = { workspace = true }
serde = { version = "1", features = ["derive"] }
ron = "0.12"
