[package]
name = "engine-image"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "image format: custom .mi format with ZSTD compression, encode/decode, SIMD pixel ops"
repository.workspace = true
readme.workspace = true
categories.workspace = true
keywords.workspace = true

[dependencies]
zstd = { version = "0.13", default-features = false }
thiserror = "2"

[dev-dependencies]
image = "0.25"
