[package]
name = "engine-input"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
bevy_ecs = { workspace = true }
engine-core = { path = "../engine-core" }
engine-math = { path = "../engine-math" }
log = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
sdl3 = { workspace = true }
raw-window-handle = { workspace = true }
