[package]
name = "engine-input"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "input subsystem: keyboard, mouse, gamepad via SDL3 (native) or web-sys (WASM)"
repository.workspace = true
readme.workspace = true
categories.workspace = true
keywords.workspace = true

[dependencies]
bevy_ecs = { workspace = true }
engine-core = { path = "../engine-core" }
engine-math = { path = "../engine-math" }
log = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
sdl3 = { workspace = true }
raw-window-handle = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = [
    "Window",
    "Document",
    "HtmlElement",
    "KeyboardEvent",
    "MouseEvent",
    "EventTarget",
    "Navigator",
    "Gamepad",
    "GamepadButton",
] }
js-sys = "0.3"
