[package]
name = "engine-render"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
wgpu = { workspace = true }
raw-window-handle = "0.6"
engine-math = { path = "../engine-math" }
engine-core = { path = "../engine-core" }
bevy_ecs = { workspace = true }
log = { workspace = true }
bytemuck = "1.23"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
sdl3 = { workspace = true }
pollster = "0.4"

[target.'cfg(target_arch = "wasm32")'.dependencies]
pollster = "0.4"
wasm-bindgen-futures = "0.4"
