[package]
name = "engine-render"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
wgpu = { workspace = true, features = ["vulkan", "metal", "gles", "wgsl"] }
raw-window-handle = "0.6"
engine-math = { path = "../engine-math" }
engine-core = { path = "../engine-core" }
engine-assets = { path = "../engine-assets" }
engine-atlas = { path = "../engine-atlas" }
bevy_ecs = { workspace = true }
log = { workspace = true }
bytemuck = "1.23"
fontdue = "0.9"
guillotiere = "0.6"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
sdl3 = { workspace = true }
pollster = "0.4"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["Window", "Document", "HtmlCanvasElement", "OffscreenCanvas"] }
