[package]
name = "lunar-2d"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "2d transform propagation and systems for lunar"
repository.workspace = true
readme.workspace = true
categories.workspace = true
keywords.workspace = true

[dependencies]
lunar-core = { path = "../lunar-core" }
lunar-math = { path = "../lunar-math" }
bevy_ecs = { workspace = true }
