[package]
name = "lunar-3d"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "3d components and systems for lunar — transform hierarchy, camera, mesh, material, lighting"
repository.workspace = true
readme.workspace = true
categories.workspace = true
keywords.workspace = true

[dependencies]
rustc-hash = { workspace = true }
lunar-core = { path = "../lunar-core" }
lunar-math = { path = "../lunar-math" }
lunar-assets = { path = "../lunar-assets" }
bevy_ecs = { workspace = true }
log = { workspace = true }

# native-only: parallel cull-SoA build (wasm falls back to the sequential path)
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rayon = { workspace = true }
