[package]
name = "lunar-atlas"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "texture atlas: maxrects bin-packing, region lookup, manifest serialization (RON/binary)"
repository.workspace = true
readme.workspace = true
categories.workspace = true
keywords.workspace = true

[dependencies]
rustc-hash = { workspace = true }
lunar-image = { path = "../lunar-image", version = "1.0.0" }
lunar-assets = { path = "../lunar-assets", version = "1.0.0" }
lunar-math = { path = "../lunar-math", version = "1.0.0" }
bevy_ecs = { workspace = true }
log = { workspace = true }
thiserror = "2"
