[package]
name = "lunar-bsp-build"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "offline BSP tree and PVS compiler for Lunar levels"

[dependencies]
lunar-bsp  = { path = "../lunar-bsp" }
lunar-math = { path = "../lunar-math" }
serde      = { version = "1", features = ["derive"] }
bincode    = "1"
rayon      = { workspace = true }
gltf       = "1"
