[package]
name = "lunar-bsp"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "BVH spatial acceleration and portal culling for the Lunar engine"

[dependencies]
bevy_ecs   = { workspace = true }
lunar-math = { path = "../lunar-math" }
lunar-3d   = { path = "../lunar-3d" }
lunar-core = { path = "../lunar-core" }
