[package]
name = "lunar-bsp"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "BVH spatial acceleration and portal culling for the Lunar engine"

[dependencies]
rustc-hash = { workspace = true }
bevy_ecs   = { workspace = true }
lunar-math = { path = "../lunar-math", version = "1.0.0" }
lunar-3d   = { path = "../lunar-3d", version = "1.0.0" }
lunar-core = { path = "../lunar-core", version = "1.0.0" }
serde      = { version = "1", features = ["derive"] }
bincode    = "1"
