[package]
name = "lunar-gamedata-build"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "build-time TOML-to-binary compiler for lunar game data tables"

[dependencies]
rustc-hash = { workspace = true }
lunar-gamedata = { path = "../lunar-gamedata", version = "1.0.0" }
lunar-core     = { path = "../lunar-core", version = "1.0.0" }
toml = "0.8"
serde = { version = "1", features = ["derive"] }
bincode = "1"
