[package]
name = "lunar-gamedata"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "runtime reader for compiled lunar game data tables"

[dependencies]
rustc-hash = { workspace = true }
serde = { version = "1", features = ["derive"] }
bincode = "1"
