[package]
name = "lunar-image"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "LIF (.li) — lossless image format with planar layout, delta filter, and zstd compression"
repository.workspace = true
readme.workspace = true
categories.workspace = true
keywords.workspace = true

[dependencies]
zstd = { version = "0.13", default-features = false }
thiserror = "2"

[dev-dependencies]
image = "0.25"
