[package]
name = "lunar-input"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "input subsystem: keyboard, mouse, gamepad via SDL3 (native) or web-sys (WASM)"
repository.workspace = true
readme.workspace = true
categories.workspace = true
keywords.workspace = true

[dependencies]
rustc-hash = { workspace = true }
bevy_ecs = { workspace = true }
lunar-core = { path = "../lunar-core" }
lunar-math = { path = "../lunar-math" }
log = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
sdl3 = { workspace = true }
raw-window-handle = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = [
    "Window",
    "Document",
    "Element",
    "HtmlElement",
    "KeyboardEvent",
    "MouseEvent",
    "EventTarget",
    "Navigator",
    "Gamepad",
    "GamepadButton",
] }
js-sys = "0.3"
