[package]
name = "lunar-lightmap"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Lightmap baker for static 3D geometry in Lunar"

[dependencies]
bevy_ecs     = { workspace = true }
lunar-math   = { path = "../lunar-math", version = "1.0.0" }
lunar-3d     = { path = "../lunar-3d", version = "1.0.0" }
lunar-assets = { path = "../lunar-assets", version = "1.0.0" }
rayon        = { workspace = true }
png          = "0.17"
