[package]
name = "lunar-macros"
version.workspace = true
edition.workspace = true
license = "MIT"
description = "internal proc-macro crate for lunar — wraps ECS derives so game crates depend only on lunar"
repository.workspace = true
readme.workspace = true
categories.workspace = true
keywords.workspace = true

[lib]
proc-macro = true

[dependencies]
syn = { version = "2", features = ["full"] }
quote = "1"
proc-macro2 = "1"
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "bmp", "webp"] }
lunar-image = { path = "../lunar-image" }
