[package]
name = "lunar-math"
version.workspace = true
edition.workspace = true
license = "MIT"
description = "math types: Vec2, Vec3, Color, Rect, Transform, LocalTransform, WorldTransform, convenience macros"
repository.workspace = true
readme.workspace = true
categories.workspace = true
keywords.workspace = true

[dependencies]
glam = { workspace = true }
bevy_ecs = { workspace = true }
